.k8s/01_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat-app
  namespace: m324-team1
  labels:
    app: chat-app
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: chat-app
  template:
    metadata:
      labels:
        app: chat-app
    spec:
      containers:
        - name: chat-app
          image: mouayad04/m324:1.0.0
          command:
            - /bin/sh
            - "-c"
            - yarn start
          startupProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 10
            failureThreshold: 5
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /
              port: http
            failureThreshold: 3
            periodSeconds: 5
          ports:
            - name: http
              containerPort: 3000
          resources:
            requests:
              cpu: 25m
              memory: 256Mi
            limits:
              cpu: 200m
              memory: 512Mi
