.k8s/02_service.yml
apiVersion: v1
kind: Service
metadata:
  name: chat-app 
  namespace: m324-team1 
spec:
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
  selector:
    app: chat-app
